@@ -2,6 +2,11 @@ This documents significant changes in the 1.0 branch of ksh 93u+m.
 For full details, see the git log at: https://github.com/ksh93/ksh/tree/1.0
 Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.
 
+2023-04-02:
+
+- Corrected the 2022-07-05 fix for the detection of a syntax error in
+  compound assignments to associative arrays.
+
 2023-03-29:
 
 - Fixed a bug in 'printf -v' (added on 2021-11-18) where using the %B format
